--- a/css/common.css
+++ b/css/common.css
@@ -15,7 +15,7 @@ li {
 }
 
 .container {
-    
+    max-width: 1180px;
     margin: 0 auto;
 }
 
@@ -32,37 +32,38 @@ body {
 .blackbutton {
     font-family: 'Open Sans';
     padding: 11px 40px;
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 22px;
-align-items: center;
-text-align: center;
-text-transform: uppercase;
-
-
-color: #FFFFFF;
-background: #000000
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: #000000
 }
 
-
-.delivery {
- padding: 11px 40px ;
- font-weight: 700;
- font-family: 'Crimson Text';
-background: rgba(112, 187, 220, 0.2);
-font-size: 26px;
-line-height: 34px;
-    font-style: italic;
+.joinbutton {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    align-items: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: #000000;
+    width: 81px;
+    height: 45px;
+    
 }
+
 
 fieldset {
     width: 1400px;
-height: 254px;
-left: 0px;
-top: 301px;
-
-background: rgba(125, 151, 218, 0.2);
+    height: 254px;
+    left: 0px;
+    top: 301px;
+    background: rgba(125, 151, 218, 0.2);
 }
 
 .price {
@@ -74,26 +75,16 @@ footer {
    color: #FFFFFF;
    font-family: 'Open Sans';
    font-weight: 400;
-   height: 555px;
-   margin-right: auto;
-   overflow: hidden;
-
-   
 }
 
 .basement {
     display: flex;
-    width: 1400px;
+    gap: 20px;
+
 }
 
-.footer-item {
-    margin-bottom: 15px;
-    size: 16px;
-    margin-left: 110px;
-}
 
-.border {
-    display: inline-block;
+.footer__title {
     border-color: #666666;
     border-bottom-style: solid;
     border-bottom-width: 1px;
@@ -101,8 +92,12 @@ footer {
     width: 380px;
     color: #AAAAAA;
     margin-top: 100px;
+    margin-bottom: 15px;
 
-    
+}
+
+.footer-item {
+    margin-bottom: 15px;
 }
 
 header {
@@ -128,11 +123,9 @@ header {
 .emailbutton {
     background: #666666;
     height: 40px;
-width: 380px;
-left: 910px;
-top: 171px;
-border-radius: 0px;
-
+    width: 380px;
+    left: 910px;
+    top: 171px;
 }
 
 .scnetwork {
@@ -193,7 +186,7 @@ border-radius: 0px;
 
 
 .contact {
- margin-right:  110px;   
+    margin-right:  110px;   
 }
 
 .guarantee {
@@ -202,12 +195,8 @@ border-radius: 0px;
     font-size: 26px;
 }
 
-form {
-max-width: max-content;
-height: 542px;
-left: 110px;
-top: 301px;
-background: #E5EAF8
+.footer__form {
+    display: flex;
 }
 
 .footer-link {
@@ -215,10 +204,7 @@ background: #E5EAF8
 }
 
 .bottom {
-    width: 1180px;
     display: flex;
-    margin-left: 110px;
-    margin-right: 110px;
     border-top-style: solid;
     border-color: #666666;
     border-top-width: 1px;
@@ -227,13 +213,13 @@ background: #E5EAF8
 }
 
 .copyright {
-    margin-left: 280px;
-    margin-right: 110px
+    margin-right: 115px
     
 }
 
 .drline {
     color: #A2A2A2;
+    margin-right: 80px;
 }
 
 .bottom-item {
