--- a/css/style__index.css
+++ b/css/style__index.css
@@ -193,7 +193,7 @@
     position: relative;
     left: 30px;
     margin-bottom: 30px;
-    font-family: Open Sans;
+    font-family: 'Open Sans';
     font-size: 16px;
     font-weight: 400;
 }
