--- a/css/style__index.css
+++ b/css/style__index.css
@@ -4,33 +4,48 @@
     background-color:  #EEE4DB;
     margin-top: 130px;
     width: 1180px;
+    height: 372px;
 }
 
-.title {
+.banner__button {
+    margin-left: 31px;
+    width: 31px;
+    height: 3px;
+    background-color: #D6CAC2;
+    
+}
+
+.banner__button:hover {
+    background-color: rgba(30, 6, 6, 0.6) ;
+    cursor: pointer;
+}
+
+.banner_title {
     font-weight: 700;
     font-size: 40px;
-    margin-left: 140px;
+    margin-left: 133px;
+    margin-top: 37px;
     width: 307px;
-    height: 88px;
-    left: 243px;
-    top: 320px;
+}
+
+.banner__text {
+    margin-top: -100px;
 }
 
 .monster {
-    margin-left: 450px;
-    margin-bottom: 250px;
-    margin-top: -237px;
+    position: absolute;
+    top: 143px;
+    left: 615px;
 }
 
-.message {
+.banner__message {
     margin-left: 130px;
-    margin-top: -450px;
 }
 
-.shipping {
+.banner__shipping {
     font-family: 'Open Sans' ;
-    margin-top: 105px;
     background-color: #C29974;
+    margin-top: 90px;
     width: 1180px;
     height: 39px;
     text-align: center;
@@ -38,27 +53,38 @@
     color: #FFFFFF;
 }
 
-.design {
+.banner__shipping-text {
+    padding: 10px;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 16px;
+}
+
+.banner__design {
     font-family: 'Crimson Text';
     font-style: italic;
     font-weight: 400;
     font-size: 20px;
-    margin-left: 10px;
-    margin-bottom: 20px;
+    margin-left: 5px;
+    margin-top: -10px;
+}
+
+.banner__button-explore {
+    width: 161px;
+    height: 40px;
+    margin-top: 20px;
+    margin-left: 5px;
 }
 
 .number {
     padding-left: 28px;
-    padding-top: 17px;
+    padding-top: 27px;
+    margin-bottom: 10px;
 }
 
-.rectangle {
-    padding-top: 10px;
-    padding-left: 30px;
-}
 
 .products__title {
-    margin-top: 90px;
+    margin-top: 130px;
     margin-bottom: 30px;
     font-size: 38px;
     text-transform: uppercase;
@@ -66,19 +92,36 @@
 
 .products {
     display: flex;
-    gap: 20px;
+    gap: 23px;
 }
 
 .products__item {
     position: relative;
-    bottom: 160px;
+    max-width: 281px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.products__text {
     text-align: center;
+    display: flex;
+    position: absolute;
+    justify-content: center;
     font-family: 'Montserrat';
     font-size: 26px;
     font-weight: 700;
+    max-width: 110px;
     color: #FFFFFF;
+}
+
+.products__text:hover {
+    text-decoration-line: underline;
 
 }
+
+
 
 .delivery__item {
     margin-bottom: 20px;
@@ -89,7 +132,6 @@
    line-height: 34px;
    letter-spacing: 0em;
    text-align: left;
-   
    }
 
 .delivery {
@@ -98,7 +140,8 @@
     background: rgba(112, 187, 220, 0.2);
     font-size: 26px;
     font-style: italic;
-    position: relative;
+    padding: 11px 180px 11px 60px;
+    margin-left: -60px;
 }
 
 .delivery__list {
@@ -106,9 +149,9 @@
 }
 
 .delivery__title {
-    position: relative;
-    left: 100px;
-    top: 30px;
+    font-size: 38px;
+    margin-top: 39px;
+    margin-left: 120px;
     font-size: 38px;
 }
 
@@ -116,14 +159,23 @@
 
 .delivery__elements {
     margin-top: 100px;
-    margin-left: -100px;
+    margin-left: -200px;
+    max-width: 480px;
 }
 
 .delivery__description {
-    margin-bottom: 15px;
-    font-family: 'Open Sans';
-    size: 16px;
+  margin-top: 178px;
+  margin-left: -70px;
+  max-width: 480px;
+  font-family: 'Open Sans';
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 15px;
 
+}
+
+.delivery__description-1 {
+    margin-bottom: 28px;
 }
 
 .delivery__description-2 {
@@ -133,10 +185,17 @@
 
 }
 
+.learn-more__button {
+    width: 149px;
+    height: 40px;
+    background-color: black;
+    margin-left: 5px;
+}
+
 .logos {
     display: flex;
     gap: 127px;
-    margin-top: 90px;
+    margin-top: 98px;
 }
 
 .about {
@@ -151,12 +210,12 @@
     text-transform: uppercase;
     position: relative;
     bottom: 25px;
-    left: 20px;
+    left: 28px;
 }
 
 .design-life__item {
-    position: relative;
     margin-left: 30px;
+    margin-top: -3px
 }
 
 .design-life__about {
@@ -165,20 +224,32 @@
 }
 
 .design-life__text {
-    margin-bottom: 20px;
     font-size: 16px;
+    margin-top: -1px;
+    font-family: 'Open Sans';
+    font-size: 16px;
+    font-weight: 400;
+    max-width: 483px;
 }
 
 .design-life {
     width: 543px;
     height: 228px;
     background: #E1F0F7;
+    margin-top: 24px;
+}
+
+.design__button {
+    width: 123px;
+    height: 40px;
+    margin-top: 33px;
 }
 
 .map {
     width: 543px;
-    height: 228px;
+    height: 209px;
     background: #E1F0F7;
+    margin-top: 22px;
 }
 
 .map__title {
@@ -186,16 +257,17 @@
     text-transform: uppercase;
     position: relative;
     bottom: 25px;
-    left: 20px;
+    left: 30px;
 }
 
 .map__text {
-    position: relative;
-    left: 30px;
     margin-bottom: 30px;
     font-family: 'Open Sans';
     font-size: 16px;
     font-weight: 400;
+    max-width: 483px;
+    margin-left: 28px;
+    margin-top: 3px;
 }
 
 .map__adress {
@@ -208,12 +280,16 @@ button {
 }
 
 .button__title {
-   padding-left: 15px;
+   padding-left: 14px;
+   max-width: 580px;
+   font-family: 'Open Sans';
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .buttons {
     display: flex;
-    margin-top: 33px;
-    margin-bottom: 100px;
+    margin-top: 31px;
+    margin-bottom: 90px;
     gap: 6px;
 }
