--- a/css/style__toys.css
+++ b/css/style__toys.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 254px;
     background: rgba(125, 151, 218, 0.2);
-    margin-top: 50px;
+    margin-top: 58px;
 }
 
 .toys__title {
@@ -11,13 +11,12 @@
     font-family: 'Montserrat';
     font-size: 40px;
     font-weight: 700;
-    margin-left: 110px;
     text-transform: uppercase;
 }
 
 .toys__catalog {
     display: flex;
-    margin-left: 110px;
+    margin-top: -10px;
     gap: 20px;
     font-family: Crimson Text;
     font-size: 20px;
@@ -31,7 +30,8 @@
 
 .cost {
     display: flex;
-    margin-top: 40px;
+    margin-top: 36px;
+    margin-left: 143px;
 }
 
 .cost-label {
@@ -45,7 +45,7 @@
 
 .cost-input {
     height: 1px;
-    width: 190px;
+    width: 156px;
     -webkit-appearance: none;
     appearance: none;
     background-color: rgba(125, 151, 218, 0.2);
@@ -78,21 +78,21 @@
 
 .cost-price-0 {
     display: flex;
-    margin-top: 60px;
-    margin-left: -230px;
+    margin-top: 68px;
+    margin-left: -192px;
     
 }
 
 .cost-price-500 {
     display: flex;
-    margin-left: 210px;
-    margin-top: 55px;
+    margin-left: 170px;
+    margin-top: 67px;
 }
 
 
 .color {
-    margin-top: 40px;
-    margin-left: 140px;
+    margin-top: 34px;
+    margin-left: 110px;
     gap: 15px;
 }
 
@@ -122,6 +122,19 @@
     margin-left: 15px;
 }
 
+.checkbox-label:active {
+    text-decoration-line: underline;
+}
+
+.checkbox-label:hover {
+    text-decoration-line: underline;
+}
+
+.checkbox-label:disabled {
+    opacity: 0.3;
+}
+
+
 .checkbox-label::before {
     content: "";
     width: 19px;
@@ -144,8 +157,8 @@
 .toys-delivery {
     display: flex;
     flex-direction: column;
-    margin-top: 40px;
-    margin-left: 160px;
+    margin-top: 34px;
+    margin-left: 124px;
 }
 
 .toys-delivery-legend {
@@ -153,13 +166,13 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 22px;
-    margin-bottom: 15px;
+    margin-bottom: 13px;
     
 }
 
 .toys-shipping {
     display: flex;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .toys-delivery-label {
@@ -198,8 +211,8 @@
 .amount {
     display: flex;
     flex-direction: column;
-    margin-top: 40px;
-    margin-left: 130px;
+    margin-top: 34px;
+    margin-left: 72px;
 }
 
 .amount-legend {
@@ -234,6 +247,12 @@
     font-weight: 400;
 }
 
+.amount-label:hover {
+    opacity: 0.4;
+    background: #F3D0DB;
+   
+}
+
 .amount-input:checked + .amount-label{
     display: flex;
     justify-content: center;
@@ -259,7 +278,7 @@
     text-transform: uppercase;
     color: #FFFFFF;
     background: #000000;
-    margin-top: 80px;
+    margin-top: 73px;
     margin-left: 60px;
 }
 
@@ -270,6 +289,8 @@
     flex-wrap: wrap;
     text-align: center;
 }
+
+
 
 .products__list-1{
     margin-top: 60px;
@@ -300,8 +321,8 @@
 }
 
 .toys-arrow-l {
- position: relative;
- right: 400px;
+    position: relative;
+    right: 400px;
 }
 
 .toys-arrow-r {
