--- a/css/style__toys.css
+++ b/css/style__toys.css
@@ -329,3 +329,41 @@
     position: relative;
     left: 400px;
    }
+
+   .catalog__shark-learn { 
+    display: none; 
+  } 
+  .catalog__shark-learn:hover { 
+    display: block;
+  } 
+ 
+  .catalog__sharktext {
+    display: block; 
+    width: 207px; 
+    height: 207px; 
+    background: #E5EAF8; 
+    left: 23%; 
+    top: 19%; 
+  }
+
+  .price-title {
+    font-family: 'Open Sans';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: center;
+
+  }
+
+  .toys-numbers {
+
+  }
+
+  .toys-numbers:hover {
+    color: #AAAAAA;
+  }
+
+  .toys-numbers:active {
+    color: #C29974;
+  }
