--- a/css/style__catalog.css
+++ b/css/style__catalog.css
@@ -8,6 +8,7 @@ text-transform: uppercase;
 }
 
 .catalog-1 {
+    margin-top: 50px;
     display: flex;
     margin-left: 55px;
 }
@@ -91,6 +92,10 @@ text-transform: uppercase;
 
 }
 
+.catalog-1__link:hover {
+    text-decoration: underline;
+}
+
 .catalog-2__link {
     position: relative;
     bottom: 155px;
@@ -100,4 +105,28 @@ text-transform: uppercase;
     font-weight: 700;
     line-height: 32px;
     text-align: center;
+}
+
+.catalog-2__link:hover {
+    text-decoration: underline;
+}
+
+.catalog__arrow {
+    position: absolute;
+    top: 224px;
+    left: 334px;
+
+}
+
+.catalog-list {
+    display: flex;
+    margin-top: 15px;
+    gap: 87px;
+    font-family: Crimson Text;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0em;
+    text-align: left;
 }
